Working on resposniveness and weird overlap/height issues.

--- a/src/styles/_photogallery.scss
+++ b/src/styles/_photogallery.scss
@@ -1,3 +1,5 @@
+$text-height: 50vh;
+
 .hovereffect {
   width: 100%;
   height: 100%;
@@ -58,20 +60,14 @@ ul.gallery {
 li {
   list-style-type: none;
   flex-grow: 1;
-  height: 40vh;
 }
 
+// need to target images themselves for height
 .photo-row > li {
-  height: 40vh;
+  height: 60vh;
 }
-
 .text-row > li {
-  max-height: 80vh;
-  min-height: 40vh;
-}
-
-.text-row > .photo {
-  max-width: 25vw;
+  height: 50vh;
 }
 
 .photo-layout {
@@ -79,21 +75,15 @@ li {
 }
 
 @media (max-width: 768px) {
-  .text-row {
-    order: 1;
-  }
-  .top-row {
-    order: 2;
-  }
+  //   .text-row {
+  //     order: 1;
+  //   }
+  //   .top-row {
+  //     order: 2;
+  //   }
 }
 @media (min-width: 992px) {
   /// something here later
-}
-
-.text-row {
-  .photo li {
-    max-width: 33vw;
-  }
 }
 
 img.photo-img {
@@ -104,10 +94,7 @@ img.photo-img {
 }
 
 .text-row {
-  max-height: 70vh;
-  img {
-    max-height: 70vh;
-  }
+  height: $text-height;
 }
 
 .col > img {
@@ -119,6 +106,7 @@ img.photo-img {
   word-wrap: break-word;
   overflow: auto;
   margin-left: 1.5rem;
+  height: $text-height;
 }
 
 @media (max-width: 480px) {
